...
                        .frame(width: 10, height: 10)
                        .position(x: 0, y: geometry.size.height - 10)
                }
                .padding(EdgeInsets(top: 0, leading: 0, bottom: 0, trailing: 0))
            }
            .frame(width: 20)
            .accessibilityIdentifier("segmentLine")
            
            HStack {
                VStack {
                    HStack {
                        HStack {
                            Text(segment.departureCity)
                                .font(.headline)
                                .accessibilityIdentifier("segmentDeparture")
                            
                            Spacer()
                            
                            Text(segment.dateTime.formatted(date: .numeric, time: .shortened))
                                .font(.callout)
                                .fontWeight(.light)
                                .accessibilityIdentifier("departureDate")
                                .scaledToFit()
                                .minimumScaleFactor(0.6)
                                .lineLimit(1)
                        }
                    }
                    
...
                            Circle()
                                .stroke(lineWidth: 2.5)
                                .frame(width: 40, height: 40)
                            Image(systemName: segment.findVehicle())
                                .font(.title2)
                        }
                        .overlay(Color.clear.accessibilityIdentifier("vehicleImage"))
                        
                        Button(action: {
                            detailsOpen.toggle()
                            if arrowImage == "chevron.right" {
                                arrowImage = "chevron.down"
                                lenght = 250
...
                                lenght = 85
                            }
                        }) {
                            Image(systemName: arrowImage)
                                .font(.title2)
                        }
                        .accessibilityIdentifier("openDetailsButton")
                        
                        Spacer()
                    }
                    
                    if detailsOpen {
                        if segment.segmentDescription != "" {
...
                                            Text(segment.segmentDescription)
                                                .font(.subheadline)
                                            Spacer()
                                        }
                                    }
                                }
                                .overlay(Color.clear.accessibilityIdentifier("segmentInfo"))
                                
                                Spacer()
                            }
                            .padding(.vertical, 5)
                        }
                    }
...
                                Text(String(format: "%.1f", segment.co2Emitted) + " Kg CO\u{2082}")
                                    .foregroundStyle(AppColors.red)
                                    .fontWeight(.semibold)
                                Spacer()
                            }
                        }
                        .overlay(Color.clear.accessibilityIdentifier("detailsBox"))
                    }
                    
                    Spacer()
                    
                    HStack {
                        HStack {
                            Text(segment.destinationCity)
                                .font(.headline)
                                .accessibilityIdentifier("segmentDestination")
                            
                            Spacer()
                            
                            Text(segment.getArrivalDateTime().formatted(date: .numeric, time: .shortened))
                                .font(.callout)
                                .fontWeight(.light)
                                .accessibilityIdentifier("arrivalDate")
                                .scaledToFit()
                                .minimumScaleFactor(0.6)
                                .lineLimit(1)
                        }
                    }
                }
...
