...
                    
                    Rectangle()
                        .frame(height: 1)
                        .foregroundColor(.gray)
                    Co2RecapView(halfWidth: false, co2Emitted: option.getCo2Emitted(), numTrees: option.getNumTrees(), distance: option.getTotalDistance())
                        .padding(EdgeInsets(top: 10, leading: 15, bottom: 5, trailing: 15))
                        .overlay(Color.clear.accessibilityIdentifier("co2EmittedBox"))
                    
                    TravelRecapView(singleColumn: true, distance: option.getTotalDistance(), duration: option.getTotalDuration(), price: option.getTotalPrice(), greenPrice: option.getGreenPrice())
                        .padding()
                        .overlay(Color.clear.accessibilityIdentifier("travelRecap"))
                    
                    SegmentsView(segments: option.segments)
                        .padding(.top)
                    
                    Spacer()
                }
...
                                    .padding(10)
                            }
                            .fixedSize()
                        }
                        .disabled(buttonTapped)
                        .padding(.bottom)
                        .accessibilityIdentifier("proceedButton")
                    }
                    else {
                        Button(action:  {
                            if !buttonTapped {
                                buttonTapped = true
                                Task {
...
                                    .padding(10)
                            }
                            .fixedSize()
                        }
                        .disabled(buttonTapped)
                        .padding(.bottom)
                        .accessibilityIdentifier("saveTravelButtonTwoWays")
                    }
                }
                else {
                    Button(action: {
                        if !buttonTapped {
                            buttonTapped = true
...
                                .padding(10)
                        }
                        .fixedSize()
                    }
                    .disabled(buttonTapped)
                    .padding(.bottom)
                    .accessibilityIdentifier("saveTravelButtonOneWay")
                }
            }
            .padding(10)
        }
        .onAppear {
            buttonTapped = false
...
